--- a/style.css
+++ b/style.css
@@ -391,6 +391,9 @@ a {
     width: 100%;
     display: none;
   }
+  .navbar__menu.open {
+    display: block;
+  }
   .solutions__majors {
     flex-direction: column;
     align-items: center;
